# vulkan_compute_template

./: .gitignore  CMakeLists.txt  draw_results.py  readme.md  report.md  script.py
cmake/: main-config.cmake
config_files/: func1.cfg  func2.cfg  func3.cfg
data/: results.csv  results_tpool.csv
include/: exceptions.h  parse_file.h  simple_compute_pipeline.h
include/vulkan_base/: buffer.h  command_buffer.h  common.h  create_info.h  debug.h  descriptor_set_manip.h  sync_objects.h  utils.h  vk_device.h  vk_instance.h
scripts/: make_flamegraph.sh  perf_stat.sh
shaders/: compute.comp  func1.comp  func2.comp  func3.comp
src/: main.cpp  parse_file.cpp  simple_compute_pipeline.cpp
src/vulkan_base/: buffer.cpp  command_buffer.cpp  create_info.cpp  debug.cpp  descriptor_set_manip.cpp  sync_objects.cpp  utils.cpp  vk_device.cpp  vk_instance.cpp
